# fastcommit

./: .gitignore  README.md  pyproject.toml  test.py
fastcommit/: config.py  core.py  main.py
