[project]
name = "fastcommit"
version = "0.0.2"
description = "AI 生成 Git Commit Message - 使用大模型自动分析暂存区修改并生成标准的提交信息"
authors = [
    {name = "luzhixing12345", email = "luzhixing12345@163.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/luzhixing12345/fastcommit"
keywords = ["git", "commit", "ai", "openai", "gpt", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
fsc = "fastcommit.main:main"

[project.urls]
Homepage = "https://github.com/luzhixing12345/fastcommit"
Repository = "https://github.com/luzhixing12345/fastcommit"
Issues = "https://github.com/luzhixing12345/fastcommit/issues"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastcommit*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]